fix overflowing bug on interest section

--- a/src/Form.css
+++ b/src/Form.css
@@ -43,5 +43,5 @@ input::placeholder{
 }
 
 #corsTag{
-    font-size: 1.35vw;
+    font-size: 1.15vw;
 }
